task-8: Fix imports format and add some adjusments
- fix default variable init
- return slice instead of slice ptr
- remove redundant timestamp init
- add span to the ctx instead of arg
